--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -22,17 +22,24 @@ on:
     branches:
       - main
 jobs:
-  build-operator-image:
-    runs-on: ubuntu-22.04
+  build-operator-image-multiarch:
+    strategy:
+      fail-fast: false
+      matrix:
+        runners: ['ubuntu-22.04', 'ubuntu-22.04-arm']
+    runs-on: ${{matrix.runners}}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
-      - name: Install yq
-        run: sudo pip install yq
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set arch environment variable
+        run: |
+          if [[ ${{matrix.runners}} == 'ubuntu-22.04' ]]; then
+            echo arch="amd64" >> $GITHUB_ENV
+          else
+            echo arch="arm64" >> $GITHUB_ENV
+          fi
+      - name: Set short_sha environment variable
+        run: echo short_sha="$(git rev-parse --short=7 HEAD)" >> $GITHUB_ENV
       - name: Login to quay.io
         uses: docker/login-action@v2
         with:
@@ -40,15 +47,42 @@ jobs:
           password: ${{ secrets.QUAY_PASSWORD }}
           registry: quay.io
       - name: Build operator image
-        uses: docker/build-push-action@v3
+        run: |
+          docker buildx build \
+          --platform linux/${{env.arch}} \
+          --progress=plain \
+          --push \
+          -t quay.io/eclipse/che-operator:${{env.arch}}-${{short_sha}} .
+
+  publish-operator-manifest:
+    name: publish operator image
+    runs-on: ubuntu-22.04
+    needs: build-operator-image-multiarch
+    steps:
+      - name: Login to Quay.io
+        uses: docker/login-action@v2
         with:
-          file: Dockerfile
-          platforms: linux/amd64,linux/ppc64le,linux/arm64
-          push: true
-          tags: quay.io/eclipse/che-operator:next
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+      - name: Set short_sha environment variable
+        run: echo short_sha="$(git rev-parse --short=7 HEAD)" >> $GITHUB_ENV
+      - name: publish
+        run: |
+          docker manifest create quay.io/eclipse/che-operator:next \
+            --amend quay.io/eclipse/che-operator:amd64-${{env.short_sha}} \
+            --amend quay.io/eclipse/che-operator:arm64-${{env.short_sha}}
+          docker manifest annotate quay.io/eclipse/che-operator:next \
+            quay.io/eclipse/che-operator:amd64-${{env.short_sha}} \
+            --os linux --arch amd64
+          docker manifest annotate quay.io/eclipse/che-operator:next \
+             quay.io/eclipse/che-operator:arm64-${{env.short_sha}} \
+            --os linux --arch arm64
+          docker manifest push quay.io/eclipse/che-operator:next
+
   build-catalog:
     runs-on: ubuntu-22.04
-    needs: build-operator-image
+    needs: publish-operator-manifest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -69,8 +103,9 @@ jobs:
           ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh \
             --channel next \
             --image-tool docker \
-            --platform linux/amd64,linux/arm64,linux/ppc64le \
+            --platform linux/amd64,linux/arm64 \
             --catalog-image quay.io/eclipse/eclipse-che-olm-catalog:next
+
   build-catalog-with-digest:
     runs-on: ubuntu-22.04
     needs: build-operator-image
@@ -101,6 +136,6 @@ jobs:
           ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh \
             --channel next \
             --image-tool docker \
-            --platform linux/amd64,linux/arm64,linux/ppc64le \
+            --platform linux/amd64,linux/arm64 \
             --catalog-image quay.io/eclipse/eclipse-che-olm-catalog:next-digest \
             --bundle-image quay.io/eclipse/eclipse-che-olm-bundle:$(make bundle-version CHANNEL=next)-digest
