--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -59,6 +59,8 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build-operator-image-multiarch
     steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
       - name: Login to Quay.io
         uses: docker/login-action@v2
         with:
