--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -105,6 +105,7 @@ jobs:
           ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh \
             --channel next \
             --image-tool docker \
+            --multi-arch \
             --catalog-image quay.io/eclipse/eclipse-che-olm-catalog:next
 
   build-catalog-with-digest:
@@ -137,5 +138,6 @@ jobs:
           ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh \
             --channel next \
             --image-tool docker \
+            --multi-arch \
             --catalog-image quay.io/eclipse/eclipse-che-olm-catalog:next-digest \
             --bundle-image quay.io/eclipse/eclipse-che-olm-bundle:$(make bundle-version CHANNEL=next)-digest
